// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dividers DashedDivider matches snapshot 1`] = `
.c0 {
  width: 100%;
  height: 0px;
  border-top: 1px dashed #e8e5e2;
}

<dividers__DashedDivider>
  <div
    className="c0"
  />
</dividers__DashedDivider>
`;

exports[`Dividers SolidDivider matches snapshot 1`] = `
.c0 {
  width: 100%;
  height: 0px;
  border-top: 1px solid #e8e5e2;
}

<dividers__SolidDivider>
  <div
    className="c0"
  />
</dividers__SolidDivider>
`;
